--- a/react/src/components/Navbar.css
+++ b/react/src/components/Navbar.css
@@ -24,7 +24,7 @@
 .navbar-logo {
   color: #fff;
   justify-self: start;
-  margin-left: 20px;
+  margin-left: 15px;
   margin-bottom: 10px;
   cursor: pointer;
   text-decoration: none;
