--- a/react/src/components/pages/RegisterInfo.css
+++ b/react/src/components/pages/RegisterInfo.css
@@ -14,6 +14,14 @@
   height: 70vh;
 }
 
+.register-container {
+  width: 600px; /* Adjust width as needed */
+  margin: 0 auto;
+  padding-top: 100px;
+  height: 90vh;
+
+}
+
 .register-container-login {
   width: 600px; /* Adjust width as needed */
   margin: 0 auto;
